[gd_scene load_steps=4 format=3 uid="uid://department001"]

[ext_resource type="Script" path="res://DepartmentBuilding.gd" id="1_department"]
[ext_resource type="Texture2D" uid="uid://ci7nltb4sfo3y" path="res://Assets/DepartmentOutside.png" id="2_dept_outside"]
[ext_resource type="Texture2D" uid="uid://d0g4nfaariixf" path="res://Assets/DepartmentInside.png" id="3_dept_inside"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(400, 300)

[node name="DepartmentBuilding" type="Node2D"]
script = ExtResource("1_department")

[node name="DepartmentSprite" type="Sprite2D" parent="."]
position = Vector2(-41, -232)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_dept_outside")

[node name="InsideSprite" type="Sprite2D" parent="."]
position = Vector2(-41, -232)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_dept_inside")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_1")